; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/extr_industrialio-core.c_iio_event_chrdev_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/extr_industrialio-core.c_iio_event_chrdev_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.iio_event_interface*, i32 }
%struct.iio_event_interface = type { i32 }
%struct.iio_handler = type { %struct.iio_event_interface*, i32 }

@IIO_BUSY_BIT_POS = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iio_event_chrdev_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca %struct.iio_handler*, align 8
  %7 = alloca %struct.iio_event_interface*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %8 = load %struct.inode*, %struct.inode** %4, align 8
  %9 = getelementptr inbounds %struct.inode, %struct.inode* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.iio_handler* @iio_cdev_to_handler(i32 %10)
  store %struct.iio_handler* %11, %struct.iio_handler** %6, align 8
  %12 = load %struct.iio_handler*, %struct.iio_handler** %6, align 8
  %13 = getelementptr inbounds %struct.iio_handler, %struct.iio_handler* %12, i32 0, i32 0
  %14 = load %struct.iio_event_interface*, %struct.iio_event_interface** %13, align 8
  store %struct.iio_event_interface* %14, %struct.iio_event_interface** %7, align 8
  %15 = load %struct.iio_event_interface*, %struct.iio_event_interface** %7, align 8
  %16 = getelementptr inbounds %struct.iio_event_interface, %struct.iio_event_interface* %15, i32 0, i32 0
  %17 = call i32 @mutex_lock(i32* %16)
  %18 = load i32, i32* @IIO_BUSY_BIT_POS, align 4
  %19 = load %struct.iio_handler*, %struct.iio_handler** %6, align 8
  %20 = getelementptr inbounds %struct.iio_handler, %struct.iio_handler* %19, i32 0, i32 1
  %21 = call i64 @test_and_set_bit(i32 %18, i32* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %33

23:                                               ; preds = %2
  %24 = load %struct.file*, %struct.file** %5, align 8
  %25 = getelementptr inbounds %struct.file, %struct.file* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @fops_put(i32 %26)
  %28 = load %struct.iio_event_interface*, %struct.iio_event_interface** %7, align 8
  %29 = getelementptr inbounds %struct.iio_event_interface, %struct.iio_event_interface* %28, i32 0, i32 0
  %30 = call i32 @mutex_unlock(i32* %29)
  %31 = load i32, i32* @EBUSY, align 4
  %32 = sub nsw i32 0, %31
  store i32 %32, i32* %3, align 4
  br label %42

33:                                               ; preds = %2
  %34 = load %struct.iio_handler*, %struct.iio_handler** %6, align 8
  %35 = getelementptr inbounds %struct.iio_handler, %struct.iio_handler* %34, i32 0, i32 0
  %36 = load %struct.iio_event_interface*, %struct.iio_event_interface** %35, align 8
  %37 = load %struct.file*, %struct.file** %5, align 8
  %38 = getelementptr inbounds %struct.file, %struct.file* %37, i32 0, i32 0
  store %struct.iio_event_interface* %36, %struct.iio_event_interface** %38, align 8
  %39 = load %struct.iio_event_interface*, %struct.iio_event_interface** %7, align 8
  %40 = getelementptr inbounds %struct.iio_event_interface, %struct.iio_event_interface* %39, i32 0, i32 0
  %41 = call i32 @mutex_unlock(i32* %40)
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %33, %23
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local %struct.iio_handler* @iio_cdev_to_handler(i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @test_and_set_bit(i32, i32*) #1

declare dso_local i32 @fops_put(i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
